# gpg-chain

./: .gitignore  CLAUDE.md  README.md  SAMPLE_COSTS.md  TODO.md  docker-compose.yml
.cluster/: nodes
deploy/: README.md  cloudformation.yaml  dns.yaml
docs/: NEWBIE.md  architecture.md  cli-reference.md  getting-started.md  new-implementation.md  operator-guide.md  overview.md  trust-guide.md  user-guide.md
implementations/go/: .dockerignore  Dockerfile  README.md  go.mod  go.sum
implementations/python/: Dockerfile  README.md  client.py  node.py  pyproject.toml  requirements.txt
implementations/python/gpgchain/: __init__.py  discovery.py
implementations/python/gpgchain/api/: app.py  routes.py
implementations/python/gpgchain/chain/: __init__.py  hashing.py  models.py
implementations/python/gpgchain/gpg/: __init__.py  keys.py  payloads.py  verify.py
implementations/python/gpgchain/p2p/: __init__.py  gossip.py  peers.py  sync.py
implementations/python/gpgchain/store/: __init__.py  dir_store.py  memory_store.py  protocol.py
implementations/python/gpgchain/trust/: __init__.py  graph.py
scripts/: build.sh  clean.sh  cluster.sh  debug-changeset.sh  deploy-dns.sh  deploy-node.sh  integration-test.sh  node-status.sh  ssh-node.sh  stop-node.sh
spec/: data-model.md  openapi.yaml  p2p.md  payloads.md  trust.md
tests/: environment.py  requirements.txt
tests/features/: adding-keys.feature  cli-client.feature  cli-endorse.feature  cross-ledger.feature  discovery.feature  domain-allowlist.feature  interop.feature  off-ledger-signatures.feature  search.feature  (+9 more)
(+30 files in other folders)
