[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gpgchain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "cachetools>=5.3",
    "click>=8.1",
    "pgpy>=0.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
gpgchain-node = "gpgchain.node:main"
gpgchain = "gpgchain.client:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gpgchain*"]
